# microtest

./: .gitignore  pyproject.toml  requirements-dev.txt
.microenv/: pyproject.toml  pyvenv.cfg
.microenv/Scripts/: activate  activate.bat
scripts/: event_modelB.py  eventh_model.ipynb  run_core_demo.py
src/microtest/: __init__.py  core.py
src/microtest.egg-info/: SOURCES.txt  requires.txt
tests/: test_core.py
